--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,8 @@ cachetools==5.3.2
 certifi==2023.11.17
 charset-normalizer==3.3.2
 colorama==0.4.4
-Flask==2.3.2
+click>=8.1.3,<9
+Flask>=2.3.2
 gitdb==4.0.11
 GitPython==3.1.40
 glob2==0.7
@@ -39,13 +40,13 @@ scipy==1.11.4
 shellingham==1.4.0
 six==1.16.0
 smmap==5.0.1
-streamlit==1.29.0
+streamlit>=1.29.0
 tenacity==8.2.3
 threadpoolctl==3.2.0
 toml==0.10.2
 toolz==0.12.0
 tornado==6.4
-typer==0.3.2
+typer>=0.4.0
 typer-cli==0.0.12
 typing_extensions==4.9.0
 tzdata==2023.4
